2004-05-16 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src.h, src/gui_src_asm.cc: Fixed memory leak with 'canbreak' XPM.
	Added 'SourcePage' class to hold information about a source browser notebook
	page. Corresponding info in 'SourceBrowserAsm_Window'.
	Added a new member to the sa_entry structure to keep track of pixmaps.
	
2004-05-15 Scott Dattalo <scott@dattalo.com>
	* src/pic-processor: If the simulation is started from an address that has
	an execution break, now gpsim will ignore that break.
	* xpm/canbreak.xpm: New xpm that's used to indicate source lines that will
	accept breakpoints.
	* gui/gui_src.h, gui/gui_src_asm.h: Added 'canbreak' XPM to the source
	browser lines that can accept break points. NOTE: this code currently
	leaks memory!

2004-05-12  Manuel Bouyer <bouyer@antioche.eu.org>
	* src/16bit-instructions.cc, src/p18x.cc, src/p18x.h, src/pic-instructions.cc,
	 src/pic-processor.cc, src/pic-processor.h: Fix usart problems in 18x devices.
	* src/pir.cc, src/pir.h, src/uart.cc, src/uart.h: Fix usart bugs.
	(Changes were submitted as a patch and applied by Scott).
	
2004-05-15 Scott Dattalo <scott@dattalo.com>
	* src/xref.h, xref.cc: added get_value() member function to XrefObject class
	* gui/gui.h, gui/gui_break.cc, gui/gui_main.cc, gui/gui_processor.cc,
	gui/gui_regwin.cc, gui/gui_regwin.h, gui/gui_statusbar.cc:
	Converted the structure labeled_entry into a class and renamed it
	to LabeledEntry.
	* gui/gui_statusbar.h: Added.

2004-05-12 Scott Dattalo <scott@dattalo.com>
	* cli/scan.ll: Identifiers can now contain dashes.

2004-05-12 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.cc: bi-directional I/O pins were not working properly
	with modules.
	* src/processor.cc: removed debug printf stuff
	* src/ioports.cc: IOPORT class was using a hardcoded number of pins

2004-04-27 Borut Razem <borut.razem@siol.net>
	* cli/input.cc, gui/gui_main.cc: fixes to make working of CLI & GUI
	in parallel

2004-04-22 Borut Razem <borut.razem@siol.net>