@@ -1,4 +1,8 @@
 2004-05-16 Scott Dattalo <scott@dattalo.com>
+	* src/processor.h, src/processor.cc:
+	Added mapping between program memory and source file line numbers
+	
+2004-05-16 Scott Dattalo <scott@dattalo.com>
 	* gui/gui_src.h, src/gui_src_asm.cc: Fixed memory leak with 'canbreak' XPM.
 	Added 'SourcePage' class to hold information about a source browser notebook
 	page. Corresponding info in 'SourceBrowserAsm_Window'.
